--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css" type="text/css" />
     <title>WebStudio</title>
   </head>
 
   <body>
     <header>
       <nav>
-        <a href="./">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="">Студия</a></li>
+          <li><a href="./index.html">Студия</a></li>
           <li><a href="./portfolio.html">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
@@ -64,17 +64,17 @@
         <ul>
           <li>
             <a href="">
-              <img src="./images/service_1.jpg" alt="работа за компьютером" width="370" />
+              <img src="./images/service-1.jpg" alt="работа за компьютером" width="370" />
             </a>
           </li>
           <li>
             <a href="">
-              <img src="./images/service_2.jpg" alt="мобильный телефон в руке" width="370" />
+              <img src="./images/service-2.jpg" alt="мобильный телефон в руке" width="370" />
             </a>
           </li>
           <li>
             <a href="">
-              <img src="./images/service_3.jpg" alt="планшет с палитрой цвета" width="370" />
+              <img src="./images/service-3.jpg" alt="планшет с палитрой цвета" width="370" />
             </a>
           </li>
         </ul>
@@ -86,28 +86,28 @@
         <ul>
           <li>
             <a href="">
-              <img src="./images/person_1.jpg" alt="фото Игоря Демьяненко" width="270" />
+              <img src="./images/person-1.jpg" alt="фото Игоря Демьяненко" width="270" />
             </a>
             <h3>Игорь Демьяненко</h3>
             <p lang="en">Product Designer</p>
           </li>
           <li>
             <a href="">
-              <img src="./images/person_2.jpg" alt="фото Ольги Репиной" width="270" />
+              <img src="./images/person-2.jpg" alt="фото Ольги Репиной" width="270" />
             </a>
             <h3>Ольга Репина</h3>
             <p lang="en">Frontend Developer</p>
           </li>
           <li>
             <a href="">
-              <img src="./images/person_3.jpg" alt="фото Николая Тарасова" width="270" />
+              <img src="./images/person-3.jpg" alt="фото Николая Тарасова" width="270" />
             </a>
             <h3>Николай Тарасов</h3>
             <p lang="en">Marketing</p>
           </li>
           <li>
             <a href="">
-              <img src="./images/person_4.jpg" alt="фото Михаила Ермакова" width="270" />
+              <img src="./images/person-4.jpg" alt="фото Михаила Ермакова" width="270" />
             </a>
             <h3>Михаил Ермаков</h3>
             <p lang="en">UI Designer</p>
