--- a/portfolio.html
+++ b/portfolio.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Webstudio/Portfolio</title>
+    <link rel="stylesheet" href="./css/style.css" type="text/css" />
+    <title>Webstudio - Портфолио</title>
   </head>
   <body>
     <header>
       <nav>
         <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="">Студия</a></li>
+          <li><a href="./index.html">Студия</a></li>
           <li><a href="./portfolio.html">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
@@ -22,15 +22,64 @@
         <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
       </ul>
     </header>
-
-    <ul>
-      <li><a href="">Все</a></li>
-      <li><a href="">Веб-сайты</a></li>
-      <li><a href="">Приложения</a></li>
-      <li><a href="">Дизайн</a></li>
-      <li><a href="">Маркетинг</a></li>
-    </ul>
-
+    <h1>Портфолио</h1>
+    <section>
+      <h2>Наши работы</h2>
+      <ul>
+        <li><button type="button">Все</button></li>
+        <li><button type="button">Веб-сайты</button></li>
+        <li><button type="button">Приложения</button></li>
+        <li><button type="button">Дизайн</button></li>
+        <li><button type="button">Маркетинг</button></li>
+      </ul>
+      <ul>
+        <li>
+          <img src="./images/potfolio-1.jpg" alt="" width="370" />
+          <h3>Технокряк</h3>
+          <p>Веб-сайт</p>
+        </li>
+        <li>
+          <img src="./images/potfolio-2.jpg" alt="" width="370" />
+          <h3>Постер New Orlean vs Golden Star</h3>
+          <p>Дизайн</p>
+        </li>
+        <li>
+          <img src="./images/potfolio-3.jpg" alt="" width="370" />
+          <h3>Ресторан Seafood</h3>
+          <p>Приложение</p>
+        </li>
+        <li>
+          <img src="./images/potfolio-4.jpg" alt="" width="370" />
+          <h3>Проект Prime</h3>
+          <p>Маркетинг</p>
+        </li>
+        <li>
+          <img src="./images/potfolio-5.jpg" alt="" width="370" />
+          <h3>Проект Boxes</h3>
+          <p>Приложение</p>
+        </li>
+        <li>
+          <img src="./images/potfolio-6.jpg" alt="" width="370" />
+          <h3>Inspiration has no Borders</h3>
+          <p>Веб-сайт</p>
+        </li>
+        <li>
+          <img src="./images/potfolio-7.jpg" alt="" width="370" />
+          <h3>Издание Limited Edition</h3>
+          <p>Дизайн</p>
+        </li>
+        <li>
+          <img src="./images/potfolio-8.jpg" alt="" width="370" />
+          <h3>Проект LAB</h3>
+          <p>Маркетинг</p>
+        </li>
+        <li>
+          <img src="./images/potfolio-9.jpg" alt="" width="370" />
+          <h3>Growing Business</h3>
+          <p>Приложение</p>
+        </li>
+      </ul>
+    </section>
     <footer>
       <a href="./">WebStudio</a>
       <address>
