--- a/index.html
+++ b/index.html
@@ -15,51 +15,51 @@
   </head>
 
   <body>
-    <header class="header-block">
-      <nav>
+    <header class="header">
+      <nav class="header-nav">
         <a href="./index.html" class="logo">Web<span class="logo-top">Studio</span></a>
-        <ul class="header-nav list">
-          <li><a href="./index.html" class="link">Студия</a></li>
-          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-          <li><a href="" class="link">Контакты</a></li>
+        <ul class="header-list list">
+          <li class="header-item"><a href="./index.html" class="header-link link current">Студия</a></li>
+          <li class="header-item"><a href="./portfolio.html" class="header-link link">Портфолио</a></li>
+          <li class="header-item"><a href="" class="header-link link">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="auth-nav list">
-        <li><a href="mailto:info@example.com">info@example.com</a></li>
-        <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+      <ul class="header-contact list">
+        <li class="header-contact-item"><a href="mailto:info@example.com" class="header-mail link">info@example.com</a></li>
+        <li class="header-contact-item"><a href="tel:+380991111111" class="header-tel link">+38 099 111 11 11</a></li>
       </ul>
     </header>
 
     <main>
       <!-- first section -->
-      <section>
+      <section class="hero">
         <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+        <button type="button" class="btn">Заказать услугу</button>
       </section>
 
       <!-- features -->
-      <section>
-        <h2>Особенности</h2>
-        <ul>
+      <section class="features">
+        <h2 class="title">Особенности</h2>
+        <ul class="features-list">
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            <h3 class="title">Внимание к деталям</h3>
+            <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="title">Пунктуальность</h3>
+            <p class="text">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
+            </p class="text">
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="title">Планирование</h3>
+            <p class="text">
               Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
+            </p class="text">
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            <h3 class="title">Современные технологии</h3>
+            <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
           </li>
         </ul>
       </section>
@@ -125,14 +125,14 @@
     <footer class="footer-block">
       <a href="./index.html" class="logo">Web<span class="logo-bottom">Studio</span></a>
       <address>
-        <ul>
-          <li class="footer-block list">
-            <a href="" class="link">г. Киев, пр-т Леси Украинки, 26</a>
+        <ul class="footer-block-list">
+          <li>
+            <a href="https://goo.gl/maps/brbRvfbXfKNv5y6a6" class="link city" target="_blank" rel="noopener noreferer nofolow">г. Киев, пр-т Леси Украинки, 26</a>
           </li>
-          <li class="footer-block list">
+          <li>
             <a href="mailto:info@example.com" class="link">info@example.com</a>
-          </li>
-          <li class="footer-block list">
+          </liass=>
+          <li>
             <a href="tel:+380991111111" class="link">+38 099 111 11 11</a>
           </li>
         </ul>
