--- a/portfolio.html
+++ b/portfolio.html
@@ -14,18 +14,18 @@
     <link rel="stylesheet" href="./css/styles.css" type="text/css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+       <header class="header">
+      <nav class="header-nav">
+        <a href="./index.html" class="logo">Web<span class="logo-top">Studio</span></a>
+        <ul class="header-list list">
+          <li class="header-item"><a href="./index.html" class="header-link link">Студия</a></li>
+          <li class="header-item"><a href="./portfolio.html" class="header-link link current">Портфолио</a></li>
+          <li class="header-item"><a href="" class="header-link link">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@example.com">info@example.com</a></li>
-        <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+      <ul class="header-contact list">
+        <li class="header-contact-item"><a href="mailto:info@example.com" class="header-mail link">info@example.com</a></li>
+        <li class="header-contact-item"><a href="tel:+380991111111" class="header-tel link">+38 099 111 11 11</a></li>
       </ul>
     </header>
     <h1>Портфолио</h1>
