--- a/portfolio.html
+++ b/portfolio.html
@@ -14,85 +14,148 @@
     <link rel="stylesheet" href="./css/styles.css" type="text/css" />
   </head>
   <body>
-       <header class="header">
+    <!-- header -->
+    <header class="header">
       <nav class="header-nav">
         <a href="./index.html" class="logo">Web<span class="logo-top">Studio</span></a>
         <ul class="header-list list">
-          <li class="header-item"><a href="./index.html" class="header-link link">Студия</a></li>
-          <li class="header-item"><a href="./portfolio.html" class="header-link link current">Портфолио</a></li>
+          <li class="header-item">
+            <a href="./index.html" class="header-link link">Студия</a>
+          </li>
+          <li class="header-item">
+            <a href="./portfolio.html" class="header-link link current">Портфолио</a>
+          </li>
           <li class="header-item"><a href="" class="header-link link">Контакты</a></li>
         </ul>
       </nav>
       <ul class="header-contact list">
-        <li class="header-contact-item"><a href="mailto:info@example.com" class="header-mail link">info@example.com</a></li>
-        <li class="header-contact-item"><a href="tel:+380991111111" class="header-tel link">+38 099 111 11 11</a></li>
+        <li class="header-contact-item">
+          <a href="mailto:info@example.com" class="header-contact-link link">info@example.com</a>
+        </li>
+        <li class="header-contact-item">
+          <a href="tel:+380991111111" class="header-contact-link link">+38 099 111 11 11</a>
+        </li>
       </ul>
     </header>
-    <h1>Портфолио</h1>
-    <section>
-      <h2>Наши работы</h2>
-      <ul>
-        <li><button type="button">Все</button></li>
-        <li><button type="button">Веб-сайты</button></li>
-        <li><button type="button">Приложения</button></li>
-        <li><button type="button">Дизайн</button></li>
-        <li><button type="button">Маркетинг</button></li>
-      </ul>
-      <ul>
-        <li>
-          <img src="./images/potfolio-1.jpg" alt="" width="370" />
-          <h3>Технокряк</h3>
-          <p>Веб-сайт</p>
-        </li>
-        <li>
-          <img src="./images/potfolio-2.jpg" alt="" width="370" />
-          <h3>Постер New Orlean vs Golden Star</h3>
-          <p>Дизайн</p>
-        </li>
-        <li>
-          <img src="./images/potfolio-3.jpg" alt="" width="370" />
-          <h3>Ресторан Seafood</h3>
-          <p>Приложение</p>
-        </li>
-        <li>
-          <img src="./images/potfolio-4.jpg" alt="" width="370" />
-          <h3>Проект Prime</h3>
-          <p>Маркетинг</p>
-        </li>
-        <li>
-          <img src="./images/potfolio-5.jpg" alt="" width="370" />
-          <h3>Проект Boxes</h3>
-          <p>Приложение</p>
-        </li>
-        <li>
-          <img src="./images/potfolio-6.jpg" alt="" width="370" />
-          <h3>Inspiration has no Borders</h3>
-          <p>Веб-сайт</p>
-        </li>
-        <li>
-          <img src="./images/potfolio-7.jpg" alt="" width="370" />
-          <h3>Издание Limited Edition</h3>
-          <p>Дизайн</p>
-        </li>
-        <li>
-          <img src="./images/potfolio-8.jpg" alt="" width="370" />
-          <h3>Проект LAB</h3>
-          <p>Маркетинг</p>
-        </li>
-        <li>
-          <img src="./images/potfolio-9.jpg" alt="" width="370" />
-          <h3>Growing Business</h3>
-          <p>Приложение</p>
-        </li>
-      </ul>
-    </section>
-    <footer>
-      <a href="./">WebStudio</a>
-      <address>
-        <ul>
-          <li><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+
+    <!-- main -->
+    <main>
+      <section class="portfolio">
+        <h1 class="visually-hidden">Портфолио</h1>
+
+        <!-- portfolio filters -->
+        <ul class="filter-list list">
+          <li class="filter-item"><button type="button" class="filter-button btn">Все</button></li>
+          <li class="filter-item">
+            <button type="button" class="filter-button btn">Веб-сайты</button>
+          </li>
+          <li class="filter-item">
+            <button type="button" class="filter-button btn">Приложения</button>
+          </li>
+          <li class="filter-item">
+            <button type="button" class="filter-button btn">Дизайн</button>
+          </li>
+          <li class="filter-item">
+            <button type="button" class="filter-button btn">Маркетинг</button>
+          </li>
+        </ul>
+
+        <!-- portfolio items -->
+        <ul class="portfolio-list list">
+          <li class="portfolio-item">
+            <a href="" class="portfolio-link link"
+              ><img src="./images/potfolio-1.jpg" alt="трое людей на экране ноутбука" width="370" />
+              <h2 class="portfolio-title title">Технокряк</h2>
+              <p class="portfolio-text">Веб-сайт</p>
+            </a>
+          </li>
+          <li class="portfolio-item">
+            <a href="" class="portfolio-link link"
+              ><img src="./images/potfolio-2.jpg" alt="два баскетболиста и мяч" width="370" />
+              <h2 class="portfolio-title title">Постер New Orlean vs Golden Star</h2>
+              <p class="portfolio-text">Дизайн</p>
+            </a>
+          </li>
+          <li class="portfolio-item">
+            <a href="" class="portfolio-link link"
+              ><img
+                src="./images/potfolio-3.jpg"
+                alt="акула, на которой название ресторана"
+                width="370"
+              />
+              <h2 class="portfolio-title title">Ресторан Seafood</h2>
+              <p class="portfolio-text">Приложение</p>
+            </a>
+          </li>
+          <li class="portfolio-item">
+            <a href="" class="portfolio-link link"
+              ><img src="./images/potfolio-4.jpg" alt="беспроводные внешние наушники" width="370" />
+              <h2 class="portfolio-title title">Проект Prime</h2>
+              <p class="portfolio-text">Маркетинг</p>
+            </a>
+          </li>
+          <li class="portfolio-item">
+            <a href="" class="portfolio-link link"
+              ><img
+                src="./images/potfolio-5.jpg"
+                alt="две подарочных картонных коробки"
+                width="370"
+              />
+              <h2 class="portfolio-title title">Проект Boxes</h2>
+              <p class="portfolio-text">Приложение</p>
+            </a>
+          </li>
+          <li class="portfolio-item">
+            <a href="" class="portfolio-link link"
+              ><img src="./images/potfolio-6.jpg" alt="монитор с информацией" width="370" />
+              <h2 class="portfolio-title title">Inspiration has no Borders</h2>
+              <p class="portfolio-text">Веб-сайт</p>
+            </a>
+          </li>
+          <li class="portfolio-item">
+            <a href="" class="portfolio-link link"
+              ><img src="./images/potfolio-7.jpg" alt="открытая книга" width="370" />
+              <h2 class="portfolio-title title">Издание Limited Edition</h2>
+              <p class="portfolio-text">Дизайн</p>
+            </a>
+          </li>
+          <li class="portfolio-item">
+            <a href="" class="portfolio-link link"
+              ><img src="./images/potfolio-8.jpg" alt="картонная этикетка на верёвке" width="370" />
+              <h2 class="portfolio-title title">Проект LAB</h2>
+              <p class="portfolio-text">Маркетинг</p>
+            </a>
+          </li>
+          <li class="portfolio-item">
+            <a href="" class="portfolio-link link"
+              ><img src="./images/potfolio-9.jpg" alt="работа на ноутбуке" width="370" />
+              <h2 class="portfolio-title title">Growing Business</h2>
+              <p class="portfolio-text">Приложение</p>
+            </a>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <!-- footer -->
+    <footer class="footer">
+      <a href="./index.html" class="logo">Web<span class="logo-bottom">Studio</span></a>
+      <address class="footer-address">
+        <ul class="footer-list list">
+          <li class="footer-item">
+            <a
+              href="https://goo.gl/maps/brbRvfbXfKNv5y6a6"
+              class="footer-link link city"
+              target="_blank"
+              rel="noopener noreferer nofolow"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </li>
+          <li class="footer-item">
+            <a href="mailto:info@example.com" class="footer-link link">info@example.com</a>
+          </li>
+          <li class="footer-item">
+            <a href="tel:+380991111111" class="footer-link link">+38 099 111 11 11</a>
+          </li>
         </ul>
       </address>
     </footer>
